# semseg

./: .gitignore  README.md
datasets/: .gitignore  README.md
labeling-system/: run.sh  run_python.sh  test_segmentation_camvid.py
labeling-system/classify/: CMakeLists.txt  classify.cpp
labeling-system/docs/: Diagrams.vpp  Diagrams.vpp~2  Diagrams.vpp~3  Diagrams.vux
labeling-system/framer/: CMakeLists.txt  framer.cpp
labeling-system/hand_markup_tool/: CMakeLists.txt  main.cpp
labeling-system/models/: segnet_inference_modified.prototxt  segnet_mdw_modified.prototxt
movie_maker/: main.cpp
scripts/: SBDImage2VOC.m  SBDataset2VOC.m  drawContours.m  generateSgmColors.m  iou_camvid.py  iou_kitti.py  iou_mean.py  iou_pascal.py  iou_raw.py  iou_raw_camvid.py  kitti_converter.py  labelcolormap.m  paint_camvid.py  paint_kitti.py  prepare_aug.m  segmentation_accuracy-2.py  segmentation_accuracy-3.py  segmentation_accuracy.py  transform_lists.py  weak_markup_from_strong.py
